[package]
name = "mapmaster"
version = "0.1.0"
edition = "2018"
description = "Our tool to manage teeworlds maps in a distributed manner."
license-file = "LICENSE"
documentation = "README.md"
homepage = "https://github.com/TwChallenge/mapmaster"
repository =  "https://github.com/TwChallenge/mapmaster"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
lazy_static = "1.4.0"
okapi = "0.7.0-rc.1"
reqwest = "0.11.7"
rocket = "0.5.0-rc.1"
rocket_okapi = { version = "0.8.0-rc.1", features = ["rapidoc"] }
schemars = "0.8.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
structopt = "0.3.25"
structsy = "0.4.0"
structsy-derive = "0.4.0"
strum = { version = "0.23.0", features = ["derive"] }
bastion = { git = "https://github.com/bastion-rs/bastion", rev = "01eeb5861abeba8f36001f453353f0ee8101b811", features = ["tokio-runtime"] }
fort = "0.4.0"

[patch.crates-io]
lever = { path = "patch/lever" }
