[package]
name = "mapmaster"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-symbols]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0.51"
derive_more = "0.99.17"
fort = "0.4.0"
lazy_static = "1.4.0"
okapi = "0.7.0-rc.1"
reqwest = "0.11.6"
rocket = "0.5.0-rc.1"
schemars = "0.8.8"
serde_json = "1.0.72"
structopt = "0.3.25"
structsy = "0.4.0"
structsy-derive = "0.4.0"
tokio = "1.14.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.3"

[dependencies.bastion]
git = "https://github.com/bastion-rs/bastion"
rev = "01eeb5861abeba8f36001f453353f0ee8101b811"
features = ["tokio-runtime"]

[dependencies.rocket_okapi]
version = "0.8.0-rc.1"
features = ["rapidoc"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.strum]
version = "0.23.0"
features = ["derive"]
